hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_darray.php.exp
File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 30-29:
A closing square bracket (']') is expected here. (Parsing[1002])
